<resources>
    <string name="app_name">AstroTell</string>
    <string name="crash_toast_text">Application Stopped!</string>
    <string name="dummy_Description">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</string>
    <string name="digits_numbers">1234567890</string>
    <string name="digits_characters_only">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="digits_characters">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM,.</string>
    <string name="digits_name">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM.</string>
    <string name="digits_alphanumeric">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM1234567890/,.:=-+!@#%*&amp;\'</string>
    <string name="digits_alphanumeric_multiline">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM\n1234567890/,.:=-+!@#%*&amp;\'</string>
    <string name="currency">₹</string>
    <string name="login">Login</string>
    <string name="login_or_create_a_new_account">Login or Create a New Account</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_">Mobile Number:</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>
    <string name="mobile_number_mandatory">Mobile Number*</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="submit">Submit</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="one_time_password_otp">One Time Password (OTP)</string>
    <string name="version">App Version</string>
    <string name="wallet">Wallet</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="chat_with_astrologer">Chat with Astrologer</string>
    <string name="chat_with_astrologer_desc">Starting from ₹5/min only\n(First minute is not charged)</string>
    <string name="talk_to_astrologer">Talk to Astrologer</string>
    <string name="talk_to_astrologer_desc">Starting from ₹5/min only\n(First minute is not charged)</string>
    <string name="get_detailed_report">Get Detailed Report</string>
    <string name="select_astrologer">Select Astrologer</string>
    <string name="detailed_report_desc">Starting from ₹300 only\n(Prepared by astrologer)</string>
    <string name="shop_at_astro_mall">Shop at Astro Mall</string>
    <string name="astro_mall_desc">Starting from 499 only\n(Get free callback request)</string>
    <string name="astrology_news">Astrology News</string>
    <string name="astrology_news_desc">Browse the Independent\'s complete collection of articles and commentary on Astrology.</string>
    <string name="order_history">Order History</string>
    <string name="call">Call</string>
    <string name="report">Report</string>
    <string name="reports">reports</string>
    <string name="astro_mall">Astro Mall</string>
    <string name="our_story">Our Story</string>
    <string name="read">Read</string>
    <string name="watch">Watch</string>
    <string name="available_balance">Available Balance:</string>
    <string name="recharge">Recharge</string>
    <string name="continue_">Continue</string>
    <string name="wallet_transactions">Wallet Transactions</string>
    <string name="live_support_chat">Live Support Chat</string>
    <string name="my_languages">My Languages</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="sure_to_logout_from_app">Are you sure you want to logout from Astro App?</string>
    <string name="end">End</string>
    <string name="type_a_message">Type a message</string>
    <string name="get_report">Get Report</string>
    <string name="product_details">Product Details</string>
    <string name="daily_horoscope">Daily Horoscope</string>
    <string name="apply_voucher_code">Apply Voucher Code</string>
    <string name="add_money_to_wallet">Add money to wallet</string>
    <string name="about_me">About me</string>
    <string name="read_more">Read More</string>
    <string name="review">Review</string>
    <string name="mins">mins</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="order_id">Order Id:</string>
    <string name="status">Status:</string>
    <string name="date">Date:</string>
    <string name="date_and_time">Date &amp; time:</string>
    <string name="view_report"><u>View Report</u></string>
    <string name="delete_all_orders">Delete All %s Orders</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="search_product_name">Search Product Name</string>
    <string name="qty">Qty</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="shipping">Shipping</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="name_mandatory">Name*</string>
    <string name="select_address">Select Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="comments">Comments</string>
    <string name="comments_">Comments:</string>
    <string name="referred_by_consultant">Referred by consultant:</string>
    <string name="enter_consultant_name">Enter Consultant Name</string>
    <string name="full_name_mandatory">Full Name*</string>
    <string name="first_name">First Name</string>
    <string name="first_name_mandatory">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="gender_mandatory">Gender*</string>
    <string name="dob_mandatory">Date of Birth*</string>
    <string name="time_of_birth_mandatory">Time of Birth*</string>
    <string name="place_of_birth_mandatory">Place of Birth*</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state_mandatory">State*</string>
    <string name="city_mandatory">City*</string>
    <string name="country_mandatory">Country*</string>
    <string name="marital_status_mandatory">Marital Status*</string>
    <string name="occupation">Occupation</string>
    <string name="occupation_">Occupation:</string>
    <string name="topic_of_concern">Topic of Concern*</string>
    <string name="i_want_answer_in">I want answer in</string>
    <string name="partners_details">Partner\'s Details</string>
    <string name="any_comments">Any Comments</string>
    <string name="locality_mandatory">Locality*</string>
    <string name="landmark">Landmark</string>
    <string name="flat_no_mandatory">Flat No*</string>
    <string name="pincode_mandatory">Pin Code*</string>
    <string name="please_accept_chat_request">Please accept chat request</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="payment_information">Payment Information</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="GST_at">GST @</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="total_payable_amount">Total Payable Amount</string>
    <string name="write_your_review_here">Write your review here…</string>
    <string name="client_profile">Client Profile</string>
    <string name="login_signup">Login/Signup</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="tutorialOneTitle">Consult Astrologer Live on\nchat &amp; call ☺️</string>
    <string name="search_name_skill_language">Search Name, Skill, Language</string>
    <string name="sort_by">Sort By</string>
    <string name="experience_high_to_low">Experience : High to Low</string>
    <string name="experience_low_to_high">Experience : Low to High</string>
    <string name="total_orders_high_to_low">Total Orders : High to Low</string>
    <string name="total_orders_low_to_high">Total Orders : Low to High</string>
    <string name="price_high_to_low">Price : High to Low</string>
    <string name="price_low_to_high">Price : Low to High</string>
    <string name="delete_item">Delete Item</string>
    <string name="sure_to_delete_item_from_cart">Are you sure you want to delete this item from cart?</string>
    <string name="delete_address">Delete Address</string>
    <string name="sure_to_delete_address">Are you sure you want to delete this address?</string>
    <string name="buy_now">Buy Now</string>
    <string name="chat_intake_form">Chat Intake Form</string>
    <string name="call_intake_form">Call Intake Form</string>
    <string name="report_intake_form">Report Intake Form</string>
    <string name="free_intake_form">Free Intake Form</string>
    <string name="read_less">Read Less</string>
    <string name="rate_format">₹%.2f/min</string>
    <string name="done">Done</string>
    <string name="select_language_you_know">Please select the languages you know</string>
    <string name="enterFirstName">Please enter first name.</string>
    <string name="enterLastName">Please enter last name.</string>
    <string name="selectGender">Please select gender.</string>
    <string name="selectDOB">Please select date of birth.</string>
    <string name="selectTOB">Please select time of birth.</string>
    <string name="enterPlaceOfBirth">Please enter place of birth.</string>
    <string name="enterValidEmail">Please enter a valid email address.</string>
    <string name="enterState">Please enter state.</string>
    <string name="enterCity">Please enter city.</string>
    <string name="enterCountry">Please enter country.</string>
    <string name="selectMaritalStatus">Please select marital status.</string>
    <string name="enterOccupation">Please enter occupation.</string>
    <string name="selectTopicOfConcern">Please select topic of concern.</string>
    <string name="enterPartnerFirstName">Please enter partner\'s first name.</string>
    <string name="enterPartnerLastName">Please enter partner\'s last name.</string>
    <string name="enterPartnerDOB">Please enter partner\'s date of birth.</string>
    <string name="enterPartnerTOB">Please enter partner\'s time of birth.</string>
    <string name="enterPartnerPOB">Please enter partner\'s place of birth.</string>
    <string name="enterPartnerState">Please enter partner\'s state.</string>
    <string name="enterPartnerCity">Please enter partner\'s city.</string>
    <string name="enterPartnerCountry">Please enter partner\'s country.</string>
    <string name="enterComments">Please enter comments.</string>
    <string name="money_format">₹%.2f</string>
    <string name="alert">Alert</string>
    <string name="email_id">Email Id</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="time_of_birth">Time of Birth</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="marital_status">Marital status</string>
    <string name="your_review">Your review</string>
</resources>