<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_40dp"
        android:background="@drawable/shape_rect_light_gray_corner_5dp"
        android:backgroundTint="@color/colorWhite"
        android:elevation="@dimen/dimen_2dp"
        android:paddingStart="@dimen/dimen_20dp"
        android:paddingTop="@dimen/dimen_25dp"
        android:paddingEnd="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="@dimen/dimen_10dp"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_alert_title"
            app:fontFamily="@font/roboto_medium"
            tools:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/atvTitle"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_25dp"
            android:ellipsize="end"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/dimen_4dp"
            android:maxLines="10"
            android:textAlignment="viewStart"
            android:textColor="@color/colorGrayText"
            android:textSize="@dimen/text_size_alert_message"
            app:fontFamily="@font/roboto_regular"
            tools:text="@string/dummy_Description" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/atvMessage"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="end"
            android:minWidth="@dimen/dimen_50dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_medium"
            app:fontFamily="@font/roboto_medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/atvMessage"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_toStartOf="@+id/atvPositive"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="start"
            android:minWidth="@dimen/dimen_50dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_medium"
            android:visibility="visible"
            app:fontFamily="@font/roboto_medium" />

    </RelativeLayout>

</layout>