<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flReview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGray">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        app:cardCornerRadius="@dimen/dimen_16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reviewTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/your_review"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/reviewRatingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:progressDrawable="@drawable/drawable_small_rating_bar"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewTitleTV" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/aetReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_35dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:background="@drawable/shape_rect_stroke_gray_corners_6dp"
                android:digits="@string/digits_alphanumeric_multiline"
                android:gravity="start|top"
                android:hint="@string/write_your_review_here"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="160"
                android:padding="@dimen/dimen_12dp"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewRatingBar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/atvReviewTextCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:alpha="0.5"
                android:fontFamily="@font/roboto_regular"
                android:text="0/160"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="@id/aetReview"
                app:layout_constraintTop_toBottomOf="@id/aetReview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/atvSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_28dp"
                android:background="@drawable/selector_orange_button"
                android:gravity="center"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aetReview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>